catalog/applications/chaos-generator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-generator-svc
spec:
  type: ClusterIP
  selector:
    app: chaos-generator
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
